--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -21,7 +21,7 @@ jobs:
     # 두번째 jobs - 독립적이므로 서로에게 영향을 주지 않는다(병렬 실행)
     deploy:
         runs-on: ubuntu-latest
-        step:
+        steps:
             - name: Get code
               uses: actions/checkout@v3
             - name: Install NodeJS
